added reset btn

--- a/dicee.html
+++ b/dicee.html
@@ -22,8 +22,10 @@
         <p>Player 2</p>
         <img class="img2" src="images/dice6.png" />
       </div>
+      <div class="button">
+        <button class="reset-btn">Reset</button>
+      </div>
     </div>
   </body>
   <script src="index.js"></script>
-  <footer>www 🎲 App Brewery 🎲 com</footer>
 </html>
